More theme fixes, and change button color so it's readable on the default theme.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -65,21 +65,32 @@ body {
   right: 9px;
   top: 9px;
   z-index: 1000;
-  color: rgba(255, 255, 255, 0.7);
   text-align: center;
   vertical-align: middle;
   line-height: 32px;
   cursor: default;
 }
 
+.dark {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.light {
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .osbuttons li.close:hover {
   background-color: rgba(232, 17, 35, 0.8);
   transition: background-color .2s;
+  color: rgba(255, 255, 255, 0.7);
+
 }
 
 .osbuttons li.min:hover, .osbuttons li.max:hover {
   background-color: rgba(26, 134, 219, 0.8);
   transition: background-color .2s;
+  color: rgba(255, 255, 255, 0.7);
+
 }
 
 .osbuttons li.max .square{
