--- a/src/themes/midnight.css
+++ b/src/themes/midnight.css
@@ -337,6 +337,15 @@ body {
 #loginbutton {
 	background: #192633 !important;
 }
+._3v_p ._5hy4, ._3v_o ._5hy4 {
+  color: #eee !important;
+}
+._3v_p ._43di, ._3v_o ._43di, ._3v_p ._3403, ._3v_o ._3403 {
+  color: #ddd !important;
+}
+._3v_p ._210j ._43dj .uiInputLabelLabel, ._59h8, ._3v_p ._59h7 ._5hy9 {
+  color: #aaa !important;
+}
 
 /* Conversation find bar */
 ._33p7 {
